Added more files to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ matlab-exercises-emaip.pdf
 matlab-exercises-emaip.synctex.gz
 matlab-exercises-emaip.thm
 matlab-exercises-emaip.toc
+matlab-exercises-emaip.fls
+matlab-exercises-emaip.fdb_latexmk
 answers.tex
 secondhints.tex
 thirdhints.tex
